# claude-slack-to-notion

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: project-profile.md
.claude-plugin/: plugin.json
.github/workflows/: auto-tag.yml  pypi-publish.yml
docs/: setup-guide.md  tools.md  troubleshooting.md
docs/dev-log/: issue-56.md
scripts/: run-server.sh  setup.sh
src/slack_to_notion/: analyzer.py  config.py  mcp_server.py  notion_client.py  slack_client.py
tests/: test_analyzer.py  test_mcp_server.py  test_notion_client.py  test_slack_client.py
